--- a/Exercice_10.html
+++ b/Exercice_10.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Exercice_8</title>
+        <title>Exercice_10</title>
         <meta charset="UTF-8" />
     </head>
     <body>
-        <form onSubmit="calc()">
-            <label for="age">Votre âge : </label><input type="text" id="age" name="age"/><br/>
+        <form onSubmit="letters();return false">
+            <label for="word">Entrez un mot : </label><input type="text" id="word" name="word"/><br/>
             <button id="submit" name="submit">Valider</button>
         </form>
+        <div class="response"></div>
         <script src="./exos.js"></script>
     </body>
 </html>
