--- a/Exercice_7.html
+++ b/Exercice_7.html
@@ -5,10 +5,11 @@
         <meta charset="UTF-8" />
     </head>
     <body>
-        <form>
+        <form onSubmit="calcul()">
             <label for="shoeSize">Pointure : </label><input type="text" id="shoeSize" name="shoeSize"/><br/>
             <label for="yearOfBirth">Année de naissance : </label><input type="text" id="yearOfBirth" name="yearOfBirth"/><br/>
             <button id="submit" name="submit">Valider</button>
         </form>
+        <script src="./exos.js"></script>
     </body>
 </html>
