--- a/Exercice_9.html
+++ b/Exercice_9.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Exercice_8</title>
+        <title>Exercice_9</title>
         <meta charset="UTF-8" />
     </head>
     <body>
-        <form onSubmit="calc()">
-            <label for="age">Votre âge : </label><input type="text" id="age" name="age"/><br/>
+        <form onSubmit="table();return false">
+            <label for="num">Entrez un nombre : </label><input type="text" id="num" name="num"/><br/>
             <button id="submit" name="submit">Valider</button>
         </form>
+        <div class="response"></div>
         <script src="./exos.js"></script>
     </body>
 </html>
